<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team Up</string>
    <string name="menu_settings">Configuracion</string>
    <string name="menu_salir">Salir</string>
    <string name="input_insertar">Pulse Enter para insertar!</string>
    <string name="boton_add">Aceptar</string>
    <string name="boton_borrar_row">Borrar</string>
    <string name="emptyText"></string>
    <string name="img_title">Imagen del titulo</string>
    <string name="txtEnunMain">Listado de participantes para el sorteo: </string>
    <string name="title_activity_saludo">Team UP - Sorteador de equipos</string>
    <string name="nombres">Escribe el nombre de los participantes:</string>
    <string name="sortea">Sortea!</string>
    <string name="result">El resultado del sorteo de equipos es el siguiente: </string>
    <string name="txtDestinatario">Destinatario</string>
    <string name="txtDestinatarioDefect">equipodeestrellas@googlegroups.com</string>
    <!-- string name="txtDestinatarioDefect">jacinto.moya@gmail.com</string> -->
    <string name="txtAsunto"> Asunto</string>
    <string name="txtMensaje">Mensaje</string>
    <string name="txtEnviar">Enviar</string>
    <string name="txtRegistrate">Registrate!</string>
    <string name="txtEnviarMail">Enviar sorteo por mail</string>
    <string name="txtBodyDefecto">Este sorteo automático ha sido generado con la aplicación Team UP, próximamente disponible en Google Play. Estamos naciendo!</string>
    <string name="txtEmail">Email</string>
    <string name="txtUserName">Nombre Usuario</string>
     <string name="txtNickName">Nick</string>
    <string name="txtPassword">Password</string>
    <string name="txtInvitaAcceso">Ya tienes cuenta! Accede!</string>
    <string name="TxtBienvenidaHome">Bienvenido a tu casa. Aquí podras acceder a tu perfil, tus grupos, realizar nuevos sorteos, etc.</string>
    <string name="txt_seleccionar">Seleccione los participantes</string>
    <string name="title_activity_inicio">Team Up</string>
    <string name="entrar">Entrar</string>
    <string name="Registrate">Regístrate</string>
    <string name="sortear_eventual">Sorteo Rápido</string>
    <string name="salir">Salir</string>
    <string name="inicio">Inicio</string>
    <string name="TxtNewEventual">Nuevo Sorteo Rápido</string>
    <string name="txtSelContacto">Buesqueda E-Mail</string>
    <string name="title_activity_info_evento">Información del evento</string>
    <string name="label_nombre_partido">Nombre</string>
    <string name="label_lugar_partido">Lugar</string>
    <string name="label_fecha_partido">Fecha</string>
    <string name="label_hora_partido">Hora</string>
    <string name="bt_sortear">Sortear</string>
    <string name="bt_continuar">Continuar</string>
    <string name="bt_continuar_listapart">Continuar</string>
    <string name="bt_continuar_equiposman">Continuar</string>
    <string name="bt_ver_result">Ver resultado</string>
    <string name="tv_numequipos">Número de equipos</string>
    <string name="tv_swialeatorios">Equipos aleatorios</string>
    <string name="title_activity_equipos_manuales">EquiposManualesActivity</string>
    <string name="menu_insertar_participantes">Insertar participantes</string>
    <string name="txtAccede">Entra a través de:</string>
    <string name="menu_select_equipo">Seleccionar equipo</string>
    <string name="bt_miperfil">Mi Perfil</string>
    <string name="bt_misgrupos">Mis Grupos</string>
    <string name="bt_eventorapido">Evento Rápido</string>
    <string name="title_activity_mis_grupos">Mis Grupos</string>
    <string name="title_activity_mi_perfil">Mi Perfil</string>
    <string name="bt_nuevogrupo">Crear Nuevo Grupo</string>
    <string name="txt_misgrupos">Aquí tendrás acceso a todos tus grupos!\nY recuerda..... si juegas, GANAS!</string>
    <string name="title_activity_nuevo_grupo">Nuevo Grupo</string>
    <string name="title_activity_registro">Registro Usuario</string> 
    <string name="txt_nuevogrupo">Introduce los datos para el nuevo Grupo.</string>
    <string name="label_nombregrupo">Nombre</string>
    <string name="label_deportegrupo">Deporte</string>
    <string name="label_emailgrupo">Email</string>
    <string name="bt_creargrupo">Crear Grupo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_linkregister">registrate!</string>
    <string name="bt_login">Login</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="txtNick">Nick</string>
    <string name="bt_registrar">Registrar</string>
    <string name="title_activity_home">Tu Casa</string>

</resources>