<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_Mailing_1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/txtForEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDestinatario"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <com.example.teamup.CustomAutoComplete android:id="@+id/etEmail"
		android:focusableInTouchMode="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:imeOptions="actionDone"/>
         
    <TextView
        android:id="@+id/txtForSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAsunto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="5" >
    </EditText>

    <TextView
        android:id="@+id/txtBlank0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.23"
        android:lines="5"
        android:text="" />

    <Button
        android:id="@+id/btnSendMail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEnviar" />

</LinearLayout>