<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/NickUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="" >

    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="BIENVENIDO A TEAMUP" />

    <TextView
        android:id="@+id/txt_texto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_miperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:minWidth="200dp"
        android:onClick="botonPulsado"
        android:text="@string/bt_miperfil" />

    <Button
        android:id="@+id/bt_misgrupos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:minWidth="200dp"
        android:onClick="botonPulsado"
        android:text="@string/bt_misgrupos" />

    <Button
        android:id="@+id/bt_eventorapido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:minWidth="200dp"
        android:onClick="botonPulsado"
        android:text="@string/bt_eventorapido" />

    <Button
        android:id="@+id/logoutButton"
        style="@style/DashboardButton"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:drawableTop="@drawable/home_btn_logout"
        android:onClick="botonPulsado"
        android:gravity="center" />

</LinearLayout>