<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutTxtList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_seleccionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_seleccionar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_seleccionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
  
    <LinearLayout
        android:id="@+id/layoutListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutInput"
        android:layout_below="@+id/layoutTxtList"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listView_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
	        android:stackFromBottom="false"
	        android:transcriptMode="normal">
        </ListView>

    </LinearLayout>
                    
    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.27"
            android:gravity="right"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText_input"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.96"
                android:ems="10"
                android:hint="@string/input_insertar"
                android:inputType="textCapWords|textMultiLine|textNoSuggestions" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/bt_continuar"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/bt_continuar_listapart" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>